turret/_mixins.css
:root {


  /** 
   * Transition
   */

  --transition: {
    transition: all var(--speed) ease-in-out;
  };

  --transition-fast: {
    transition: all var(--speed-fast) ease-in-out;
  };

  --transition-medium: {
    transition: all var(--speed-medium) ease-in-out;
  };

  --transition-slow: {
    transition: all var(--speed-slow) ease-in-out;
  };


  /** 
   * Clearfix
   */
  
  --clearfix: {

    &::before,
    &::after {
      content: '';
      display: table;
    }

    &::after {
      clear: both;
    }

    *zoom: 1;
  }


  /** 
   * Center
   */

  --center: {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }


  /** 
   * Cover
   */

  --cover: {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }


  /** 
   * Text Hide
   */

  --text-hide: {
    font: ~"0/0" a;
    color: transparent;
    text-shadow: none;
    background-color: transparent;
    border: 0;
  }


  /** 
   * Hide Visually
   * Hide but keep in DOM for Screen Readers
   */

  --hide-visually: {
    position: absolute;
    padding: 0;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    overflow: hidden;
    clip: rect(0 0 0 0);
  }


  /**
   * Truncate
   */

  --truncate: {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }


  /**
   * Font Smoothing
   */

  --font-smoothing-antialiased: {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  --font-smoothing-auto: {
    -webkit-font-smoothing: auto;
    -moz-osx-font-smoothing: auto;
  }


  /**
   * Overflow Scroll
   */

  --overflow-scroll: {
    overflow: scroll;
    -webkit-overflow-scrolling: touch;
  }


  /**
   * Display Title
   */

  --display-title: {
    margin: var(--display-title-margin);
    font-family: var(--display-title-font-family);
    font-weight: var(--display-title-font-weight);
    font-size: var(--display-title-font-size);
    line-height: var(--display-title-line-height);
    text-transform: var(--display-title-text-transform);
    letter-spacing: var(--display-title-letter-spacing);
  }


  /**
   * Big
   */

  --big: {
    margin: var(--big-margin);
    font-family: var(--big-font-family);
    font-weight: var(--big-font-weight);
    font-size: calc(var(--big-base-size) + (var(--big-max-size) - var(--big-min-size)) * ((100vw - var(--big-base-width)) / (var(--big-max-width) - var(--big-min-width))));
    line-height: var(--big-line-height);
  }


  /**
   * Small Caps
   */

  --small-caps: {
    margin: var(--small-caps-margin);
    font-family: var(--small-caps-font-family);
    font-weight: var(--small-caps-font-weight);
    font-size: var(--small-caps-font-size);
    line-height: var(--small-caps-line-height);
    text-transform: var(--small-caps-text-transform);
    letter-spacing: var(--small-caps-letter-spacing);
  }


  /**
   * Lead
   */

  --lead: {
    margin: var(--lead-margin);
    font-family: var(--lead-font-family);
    font-weight: var(--lead-font-weight);
    font-size: var(--lead-font-size);
    color: var(--lead-color);
    line-height: var(--lead-line-height);
  }
}

